# xtalent-graph

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.dev.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: adapter-request.yml  bug.yml  config.yml  schema-change.yml
.github/workflows/: ci.yml
docs/: api.md  architecture.md  schema.md
examples/: demo.py  demo.ts
prompts/: grok-orchestrator.md
python/: pyproject.toml
python/examples/: __init__.py  publish_demo.py
python/src/xtalent/: __init__.py  api.py  core.py  publish.py  search.py  signing.py
python/src/xtalent/backends/: __init__.py  kubo.py  qdrant.py
python/tests/: conftest.py  test_api.py  test_core.py  test_kubo_ipfs.py  test_publish.py  test_qdrant_backend.py  test_search.py  test_signing.py
schema/: example-cv-v1.md
typescript/: example.ts  package-lock.json  package.json  tsconfig.json
typescript/src/: index.ts  types.ts
